--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -34,7 +34,7 @@
     <!-- flow bite content -->
 
     <!-- common footer -->
-    <footer class="p-4">Footer: Learn Code With Durgesh</footer>
+    <footer class="p-4">Footer: Lorem ipsum dolor sit amet consectetur adipisicing elit. 
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.js"></script>
     <script data-th-src="@{'/js/script.js'}"></script>
