--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -9,11 +9,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title data-th-replace="${title}">SCM</title>
-    <link rel="stylesheet" data-th-href="@{'/css/output.css'}" />
+
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.css"
       rel="stylesheet"
     />
+    <link rel="stylesheet" data-th-href="@{'/css/output.css'}" />
+
     <!-- font awesome -->
     <link
       rel="stylesheet"
@@ -32,6 +34,9 @@
       <section data-th-replace="${content}"></section>
     </div>
     <!-- flow bite content -->
+
+    <!-- common footer -->
+    <!-- <footer class="p-4">Footer: Learn Code With Durgesh</footer> -->
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.js"></script>
     <script data-th-src="@{'/js/script.js'}"></script>
