add/display contacts

--- a/src/main/resources/templates/user/user_navbar.html
+++ b/src/main/resources/templates/user/user_navbar.html
@@ -98,7 +98,7 @@
 
     <!-- menus -->
     <div
-      class="items-center justify-between hidden w-full md:flex md:w-auto md:order-1"
+      class="items-center z-50 justify-between hidden w-full md:flex md:w-auto md:order-1"
       id="navbar-cta"
     >
       <ul
